# backend/api/gen/oas_request_encoders_gen.go
@@ -308,20 +308,6 @@ func encodeCreateRegisterEntryRequest(
 	return nil
 }
 
-func encodeCreateRegisterPolicyRequest(
-	req *RegisterPolicyUpsertRequest,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
 func encodeCreateRoleRequest(
 	req *RoleCreateRequest,
 	r *http.Request,
@@ -1094,20 +1080,6 @@ func encodeUpdatePermissionActionGroupRequest(
 
 func encodeUpdateRegisterEntryRequest(
 	req *RegisterEntryUpsertRequest,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
-func encodeUpdateRegisterPolicyRequest(
-	req *RegisterPolicyUpsertRequest,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
