# backend/api/gen/oas_validators_gen.go
@@ -2599,29 +2599,6 @@ func (s *RegisterLogList) Validate() error {
 	return nil
 }
 
-func (s *RegisterPolicyList) Validate() error {
-	if s == nil {
-		return validate.ErrNilPointer
-	}
-
-	var failures []validate.FieldError
-	if err := func() error {
-		if s.Records == nil {
-			return errors.New("nil is invalid value")
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "records",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
-
 func (s *RegisterRequest) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
